crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__multiline-continuation.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "line_type": "header",
      "header": {
        "type": "utf8"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "begin"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "languages",
        "codes": [
          "eng"
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "participants",
        "entries": [
          {
            "speaker_code": "CHI",
            "name": null,
            "role": "Child"
          },
          {
            "speaker_code": "MOT",
            "name": null,
            "role": "Mother"
          },
          {
            "speaker_code": "FAT",
            "name": null,
            "role": "Father"
          }
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "3;0",
        "role": "Child"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "FAT",
        "role": "Father"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Multi-line continuation across headers and tiers"
            }
          ]
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Constructs: continuation, newline, line, header_gap,"
            },
            {
              "type": "continuation"
            },
            {
              "type": "text",
              "text": "tab-prefixed continuation on @Participants and dependent tiers"
            }
          ]
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "situation",
        "text": "Free play session in the lab playroom with a variety of toys\n\tavailable on the floor and table"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "CHI",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "mama",
              "cleaned_text": "mama",
              "content": [
                {
                  "type": "text",
                  "content": "mama"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "I",
              "cleaned_text": "I",
              "content": [
                {
                  "type": "text",
                  "content": "I"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "want",
              "cleaned_text": "want",
              "content": [
                {
                  "type": "text",
                  "content": "want"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "to",
              "cleaned_text": "to",
              "content": [
                {
                  "type": "text",
                  "content": "to"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "go",
              "cleaned_text": "go",
              "content": [
                {
                  "type": "text",
                  "content": "go"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "to",
              "cleaned_text": "to",
              "content": [
                {
                  "type": "text",
                  "content": "to"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "the",
              "cleaned_text": "the",
              "content": [
                {
                  "type": "text",
                  "content": "the"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "park",
              "cleaned_text": "park",
              "content": [
                {
                  "type": "text",
                  "content": "park"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "and",
              "cleaned_text": "and",
              "content": [
                {
                  "type": "text",
                  "content": "and"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "play",
              "cleaned_text": "play",
              "content": [
                {
                  "type": "text",
                  "content": "play"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "on",
              "cleaned_text": "on",
              "content": [
                {
                  "type": "text",
                  "content": "on"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "the",
              "cleaned_text": "the",
              "content": [
                {
                  "type": "text",
                  "content": "the"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "swings",
              "cleaned_text": "swings",
              "content": [
                {
                  "type": "text",
                  "content": "swings"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "and",
              "cleaned_text": "and",
              "content": [
                {
                  "type": "text",
                  "content": "and"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "the",
              "cleaned_text": "the",
              "content": [
                {
                  "type": "text",
                  "content": "the"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "slide",
              "cleaned_text": "slide",
              "content": [
                {
                  "type": "text",
                  "content": "slide"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "and",
              "cleaned_text": "and",
              "content": [
                {
                  "type": "text",
                  "content": "and"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "the",
              "cleaned_text": "the",
              "content": [
                {
                  "type": "text",
                  "content": "the"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "monkey",
              "cleaned_text": "monkey",
              "content": [
                {
                  "type": "text",
                  "content": "monkey"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "bars",
              "cleaned_text": "bars",
              "content": [
                {
                  "type": "text",
                  "content": "bars"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      },
      "dependent_tiers": [
        {
          "type": "Com",
          "data": {
            "content": {
              "segments": [
                {
                  "type": "text",
                  "text": "CHI is pulling on MOT's hand while speaking, gesturing"
                },
                {
                  "type": "continuation"
                },
                {
                  "type": "text",
                  "text": "toward the door"
                }
              ]
            }
          }
        }
      ]
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "MOT",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "maybe",
              "cleaned_text": "maybe",
              "content": [
                {
                  "type": "text",
                  "content": "maybe"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "after",
              "cleaned_text": "after",
              "content": [
                {
                  "type": "text",
                  "content": "after"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "lunch",
              "cleaned_text": "lunch",
              "content": [
                {
                  "type": "text",
                  "content": "lunch"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "we",
              "cleaned_text": "we",
              "content": [
                {
                  "type": "text",
                  "content": "we"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "can",
              "cleaned_text": "can",
              "content": [
                {
                  "type": "text",
                  "content": "can"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "go",
              "cleaned_text": "go",
              "content": [
                {
                  "type": "text",
                  "content": "go"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "end"
      }
    }
  ],
  "participants": {
    "CHI": {
      "code": "CHI",
      "name": null,
      "role": "Child",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "3;0",
        "role": "Child"
      },
      "birth_date": null
    },
    "MOT": {
      "code": "MOT",
      "name": null,
      "role": "Mother",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      },
      "birth_date": null
    },
    "FAT": {
      "code": "FAT",
      "name": null,
      "role": "Father",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "FAT",
        "role": "Father"
      },
      "birth_date": null
    }
  },
  "languages": [
    "eng"
  ],
  "options": []
}
